Reajustes en archivo HTML

--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
 
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!---->
+    <!-- Font Awesome Web -->
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <!---->
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <!---->
-    <script src="main.js" type="text/javascript"></script>
-
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <!-- JavaScript -->
+    <script type="text/javascript" src="js/main.js"></script>
+    <!-- Titulo -->
     <title>Testeo</title>
 </head>
 
