--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <!-- Metadata -->
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="author" content="dssalazaru" />
+    <meta name="copyright" content="Copyright DSSU by @dssalazaru" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Font Awesome Web -->
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
@@ -14,6 +15,8 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <!-- JavaScript -->
     <script type="text/javascript" src="js/main.js"></script>
+    <!-- Icon -->
+    <link rel="icon" type="image/png" href="img/icon.png">
     <!-- Titulo -->
     <title>Testeo</title>
 </head>
