--- a/hader/index.html
+++ b/hader/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
-<html lang="es">
+<!-- Listados ICESI By DSSU Version 1.0 -->
+<html>
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="60">
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <!-- JavaScript -->
-    <script type="text/javascript" src="js/main.js"></script>
-    <title>Hader Program</title>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <!-- Titulo -->
+    <title>Listados ICESI</title>
 </head>
 <body>
-    <!--
-    <div id="data"></div>
-    <button id="b1" type="button" onclick="file();">Actualizar</button>
-    <input type="file" name="file" id="file" /> -->
-    <div>
-        <input type="file" name="inputfile" id="inputfile"> 
-        <textarea cols="30" rows="20" id="output"></textarea>
-    </div>
+    <span class="up icon-arrow-up2">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-up-circle"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z" />
+        </svg>
+    </span>
+    <section>
+        <table class="table table-striped">
+            <thead>
+                <th scope="col" id="col1">#</th>
+                <th scope="col" id="col2">Lista</th>
+                <th scope="col" id="col3">Dueños</th>
+            </thead>
+            <tbody id="data"></tbody>
+        </table>
+    </section>
+    <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-3">&copy; 2021 Creado por
+            <a class="text-dark" href="https://www.instagram.com/dssalazaru" target="_blank">dssalazaru</a>
+        </div>
+    </footer>
+    <!-- JavaScript -->
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
