--- a/Universidad/index.html
+++ b/Universidad/index.html
@@ -24,49 +24,53 @@
     <header>
         <h1>Universidad de Colombia</h1>
     </header>
-    <aside>
-        <h2>Programas</h2>
-        <ul>
-            <li><a href="#">Ingenieria de Sistemas</a></li>
-            <li><a href="#">Ingenieria Ambiental</a></li>
-            <li><a href="#">Ingenieria Industrial</a></li>
-            <li><a href="#">Ingenieria Mecanica</a></li>
-        </ul>
-    </aside>
-    <main>
-        <h2>Ingenieria de Sistemas</h2>
-        <p>Lorem ipsum dolor sit amet consectetur <strong>DROP DATABASE *;</strong> cupiditate modi molestias vero deserunt sit odit repellat voluptatem! Impedit consequatur dolore sit veniam neque a magni nobis mollitia quam. Quasi.</p>
-        <section>
-            <h2>Nuestro Pensum</h2>
-            <article>
-                <h3>Semestre #1</h3>
+    <div id="wrapper">
+        <aside>
+            <h2>Programas</h2>
+            <nav>
                 <ul>
-                    <li>Introduccion</li>
-                    <li>Logica computacional</li>
-                    <li>Calculo</li>
-                    <li>Algebra Lineal</li>
+                <li><a href="#">Ingenieria de Sistemas</a></li>
+                <li><a href="#">Ingenieria Ambiental</a></li>
+                <li><a href="#">Ingenieria Industrial</a></li>
+                <li><a href="#">Ingenieria Mecanica</a></li>
                 </ul>
-            </article>
-            <article>
-                <h3>Semestre #2</h3>
-                <ul>
-                    <li>Introduccion</li>
-                    <li>Logica computacional</li>
-                    <li>Calculo</li>
-                    <li>Algebra Lineal</li>
-                </ul>
-            </article>
-            <article>
-                <h3>Semestre #3</h3>
-                <ul>
-                    <li>Introduccion</li>
-                    <li>Logica computacional</li>
-                    <li>Calculo</li>
-                    <li>Algebra Lineal</li>
-                </ul>
-            </article>
-        </section>
-    </main>
+            </nav>
+        </aside>
+        <main>
+            <h2>Ingenieria de Sistemas</h2>
+            <p>Lorem ipsum dolor sit amet consectetur <strong>DROP DATABASE *;</strong> cupiditate modi molestias vero deserunt sit odit repellat voluptatem! Impedit consequatur dolore sit veniam neque a magni nobis mollitia quam. Quasi.</p>
+            <section>
+                <h2>Nuestro Pensum</h2>
+                <article>
+                    <h3>Semestre #1</h3>
+                    <ul>
+                        <li>Introduccion</li>
+                        <li>Logica computacional</li>
+                        <li>Calculo</li>
+                        <li>Algebra Lineal</li>
+                    </ul>
+                </article>
+                <article>
+                    <h3>Semestre #2</h3>
+                    <ul>
+                        <li>Introduccion</li>
+                        <li>Logica computacional</li>
+                        <li>Calculo</li>
+                        <li>Algebra Lineal</li>
+                    </ul>
+                </article>
+                <article>
+                    <h3>Semestre #3</h3>
+                    <ul>
+                        <li>Introduccion</li>
+                        <li>Logica computacional</li>
+                        <li>Calculo</li>
+                        <li>Algebra Lineal</li>
+                    </ul>
+                </article>
+            </section>
+        </main>
+    </div>
     <footer>
         <p>Todos los derechos reservados</p><h3>&commat;dssalazaru 2021 &copy;</h3>
     </footer>
