--- a/Universidad/index.html
+++ b/Universidad/index.html
@@ -39,10 +39,10 @@
         <main>
             <h2>Ingenieria de Sistemas</h2>
             <p>Lorem ipsum dolor sit amet consectetur <strong>DROP DATABASE *;</strong> cupiditate modi molestias vero deserunt sit odit repellat voluptatem! Impedit consequatur dolore sit veniam neque a magni nobis mollitia quam. Quasi.</p>
+            <h3>Nuestro Pensum</h2>
             <section>
-                <h2>Nuestro Pensum</h2>
                 <article>
-                    <h3>Semestre #1</h3>
+                    <h4>Semestre #1</h4>
                     <ul>
                         <li>Introduccion</li>
                         <li>Logica computacional</li>
@@ -51,7 +51,7 @@
                     </ul>
                 </article>
                 <article>
-                    <h3>Semestre #2</h3>
+                    <h4>Semestre #2</h4>
                     <ul>
                         <li>Introduccion</li>
                         <li>Logica computacional</li>
@@ -60,7 +60,7 @@
                     </ul>
                 </article>
                 <article>
-                    <h3>Semestre #3</h3>
+                    <h4>Semestre #3</h4>
                     <ul>
                         <li>Introduccion</li>
                         <li>Logica computacional</li>
@@ -72,7 +72,7 @@
         </main>
     </div>
     <footer>
-        <p>Todos los derechos reservados</p><h3>&commat;dssalazaru 2021 &copy;</h3>
+        <p>Todos los derechos reservados</p><h3> &copy; 2021 &commat;dssalazaru </h3>
     </footer>
 </body>
 
