--- a/Universidad/index.html
+++ b/Universidad/index.html
@@ -17,7 +17,7 @@
     <!-- Icon -->
     <link rel="icon" type="image/svg" href="/img/home.svg">
     <!-- Titulo -->
-    <title>Web</title>
+    <title>Universidad</title>
 </head>
 
 <body>
