--- a/App-web/index.html
+++ b/App-web/index.html
@@ -6,27 +6,37 @@
     <meta charset="UTF-8">
     <meta name="author" content="dssalazaru" />
     <meta name="copyright" content="Copyright by @dssalazaru" />
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Metadata Cache -->
     <meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <!-- Font Awesome Online -->
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <!-- CSS -->
     <link rel="stylesheet" href="/css/style.css">
+    <!-- Normalize -->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <!-- Font Awesome Online -->
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!-- Icon -->
     <link rel="icon" type="image/svg" href="/img/home.svg">
     <!-- Titulo -->
-    <title></title>
+    <title>Web</title>
 </head>
 
 <body>
-    <img src="https://www.codigos-qr.com/qr/php/qr_img.php?d=https%3A%2F%2Fdssu.me%2F&s=6&e=m" alt="QR Code generator"/>
+
+
+    <!-- Bootstrap JavaScript Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+    </script>
     <!-- JavaScript -->
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
