--- a/tester.js/index.html
+++ b/tester.js/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <!-- CSS -->
-    <link rel="stylesheet" href="/tester.js/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- Normalize -->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <!-- Font Awesome Online -->
@@ -23,34 +23,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!-- Icon -->
-    <link rel="icon" type="image/svg" href="/tester.js/img/home.svg">
+    <link rel="icon" type="image/svg" href="./img/home.svg">
     <!-- Titulo -->
     <title>Web</title>
 </head>
 
 <body>
-    </h1>
     <header>
-        <h1 class="title">*videos</h1>
-        <button onclick="toggleLang()">
-            <span id="lang">ES</span>
-        </button>
     </header>
-    <div class="container">
-        <div class="olo">
-            <span id="olo-msg">Hola Mundo!</span>
-            <div class="counter"></div>
-            <button onclick="contar()">Contar</button>
-            <div class="tel"></div>
-            <div>
-                <input type="number" name="num">
-                <button onclick="addnumer()">Add</button>
-            </div>
-        </div>
-
-        <div class="olo">
-            <div class="perfil"></div>
-        </div>
+    
+    <div class="olo">
+        <div class="api"></div>
     </div>
 
     <!-- Bootstrap JavaScript Bundle -->
@@ -58,7 +41,7 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
     <!-- JavaScript -->
-    <script src="/tester.js/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
