--- a/tester.js/index.html
+++ b/tester.js/index.html
@@ -29,11 +29,35 @@
 </head>
 
 <body>
-    <header>
-    </header>
-
-    <div class="olo">
-        <div class="api"></div>
+    <div class="d-flex justify-content-center align-items-center blank loading">
+        <div class="spinner-grow text-info" role="status">
+            <span class="visually-hidden">...</span>
+        </div>
+    </div>
+    <div class="content">
+        <header>
+            <div class="navbar navbar-dark bg-dark text-white sticky-top">
+                <div class="container-fluid">
+                <a href="index.html" class="navbar-brand">DSSU</a>
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                </ul>
+            </div>
+            </div>
+        </header>
+        <div class="container">
+            <div class="olo">
+                <div class="api"></div>
+            </div>
+        </div>
     </div>
     <!-- Bootstrap JavaScript Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
