--- a/tester.js/index.html
+++ b/tester.js/index.html
@@ -38,24 +38,48 @@
         <header>
             <div class="navbar navbar-dark bg-dark text-white sticky-top">
                 <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">DSSU</a>
-                <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link active">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
-                    </li>
-                </ul>
-            </div>
+                    <a href="index.html" class="navbar-brand">DSSU</a>
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link active" id="nav-reload">Reload</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Home</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </header>
         <div class="container">
-            <div class="olo">
-                <div class="api"></div>
+            <div class="jumbotron">
+                <div class="card">
+                    <div class="card-header">
+                        Api
+                    </div>
+                    <div class="card-body">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="getIn">Ruta</span>
+                            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" id="rutaApi" value="">
+                          </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col">
+                    <a href="#">Equpos</a>
+                </div>
+                <div class="col">
+                    <a href="#">Partidos</a>
+                </div>
+                <div class="col">
+                    <h3>Posiciones</h3>
+                    <ul class="list-group list-group-flush">
+                        
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
